--- a/acestep/gradio_ui/i18n/ja.json
+++ b/acestep/gradio_ui/i18n/ja.json
@@ -115,7 +115,7 @@
     "batch_size_info": "生成するオーディオの数(最大8)",
     "advanced_settings": "🔧 詳細設定",
     "inference_steps_label": "DiT 推論ステップ",
-    "inference_steps_info": "Turbo: 最大8、Base: 最大100",
+    "inference_steps_info": "Turbo: 最大8、Base: 最大200",
     "guidance_scale_label": "DiT ガイダンススケール(baseモデルのみサポート)",
     "guidance_scale_info": "値が高いほどテキストに忠実に従う",
     "seed_label": "シード",
@@ -130,6 +130,8 @@
     "shift_info": "baseモデル用タイムステップシフト係数 (範囲 1.0~5.0、デフォルト 3.0)。turboモデルには無効。",
     "infer_method_label": "推論方法",
     "infer_method_info": "拡散推論方法。ODE (オイラー) は高速、SDE (確率的) は異なる結果を生成する可能性があります。",
+    "custom_timesteps_label": "カスタムタイムステップ",
+    "custom_timesteps_info": "オプション：1.0から0.0へのカンマ区切り値（例：'0.97,0.76,0.615,0.5,0.395,0.28,0.18,0.085,0'）。推論ステップとシフトを上書きします。",
     "cfg_interval_start": "CFG 間隔開始",
     "cfg_interval_end": "CFG 間隔終了",
     "lm_params_title": "🤖 LM 生成パラメータ",
@@ -233,6 +235,9 @@
     "simple_example_loaded": "🎲 {filename} からランダムサンプルを読み込みました",
     "format_success": "✅ キャプションと歌詞のフォーマットに成功しました",
     "format_failed": "❌ フォーマットに失敗しました: {error}",
-    "skipping_metas_cot": "⚡ Phase 1 メタデータ COT をスキップ（サンプルは既にフォーマット済み）"
+    "skipping_metas_cot": "⚡ Phase 1 メタデータ COT をスキップ（サンプルは既にフォーマット済み）",
+    "invalid_timesteps_format": "⚠️ タイムステップ形式が無効です。デフォルトスケジュールを使用します。",
+    "timesteps_out_of_range": "⚠️ タイムステップは [0, 1] の範囲内である必要があります。デフォルトスケジュールを使用します。",
+    "timesteps_count_mismatch": "⚠️ タイムステップ数 ({actual}) が推論ステップ数 ({expected}) と異なります。タイムステップ数を使用します。"
   }
 }
